# miniagent_rust

./: .env.example  .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: context.rs  lib.rs
crates/checkpoint/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/hypothesis/: Cargo.toml
crates/hypothesis/src/: generator.rs  lib.rs  ranking.rs
crates/kg/: Cargo.toml
crates/kg/src/: embedding.rs  extraction.rs  graph.rs  lib.rs  link_prediction.rs  schema.rs
crates/memory/: Cargo.toml
crates/memory/src/: decay.rs  episodic.rs  lib.rs  manager.rs  procedural.rs  semantic.rs  types.rs  working.rs
crates/planning/: Cargo.toml
crates/planning/src/: agent_profile.rs  context_manager.rs  control_shell.rs  event_stream.rs  hooks.rs  lib.rs  orchestrator.rs  plan.rs  state_graph.rs  todo_attention.rs  tool_binding.rs
crates/planning/src/research/: alzheimers.rs  evidence_accumulator.rs  mod.rs  pi.rs  profiles.rs  scheduler.rs  synthesis_judge.rs  tournament_master.rs
crates/planning/src/roles/: critic.rs  evaluator.rs  executor.rs  judge.rs  mod.rs  observer.rs  opponent.rs  planner.rs  proposer.rs  researcher.rs  reviewer.rs  supervisor.rs  synthesizer.rs  writer.rs
crates/planning/src/tournament/: arena.rs  convergence.rs  debate.rs  elo.rs  mod.rs
crates/planning/tests/: integration.rs
crates/provider/: Cargo.toml
crates/provider/src/: deepseek.rs  lib.rs  mock.rs  router.rs  traits.rs
crates/python/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/self-improve/: Cargo.toml
crates/self-improve/src/: integrator.rs  lib.rs
crates/self-improve/src/offline/: consolidation.rs  experience_graph.rs  mod.rs  skill_manager.rs
crates/self-improve/src/online/: lifecycle_guard.rs  mod.rs  q_router.rs  reflection.rs  tool_tracker.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  routes.rs  state.rs
crates/server/src/static/: index.html
crates/skill/: Cargo.toml
crates/skill/src/: bundle.rs  discovery.rs  executor.rs  lib.rs  registry.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  metrics.rs  subscriber.rs  tracer.rs
crates/tool/: Cargo.toml
crates/tool/src/: approval.rs  executor.rs  glob_util.rs  lib.rs  registry.rs  traits.rs
crates/tool/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  pubmed.rs  read.rs  web_fetch.rs  web_search.rs  write.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: builder.rs  engine.rs  lib.rs  retry.rs  stage.rs  stages.rs
docs/: 00-overall-architecture.md  01-stateless-agent-loop.md  02-memory-system.md  03-self-improvement.md  04-knowledge-graph-hypothesis.md  05-multi-agent-comparison.md  06-multi-agent-redesign.md  README.md
skills/adaptyv/: SKILL.md
skills/aeon/: SKILL.md
skills/anndata/: SKILL.md
skills/arboreto/: SKILL.md
skills/astropy/: SKILL.md
skills/autoskill/: SKILL.md
skills/benchling-integration/: SKILL.md
skills/bgpt-paper-search/: SKILL.md
skills/bids/: SKILL.md
skills/biopython/: SKILL.md
skills/bioservices/: SKILL.md
skills/cellxgene-census/: SKILL.md
skills/cirq/: SKILL.md
skills/citation-management/: SKILL.md
skills/clinical-decision-support/: SKILL.md
skills/clinical-reports/: SKILL.md
skills/cobrapy/: SKILL.md
skills/consciousness-council/: SKILL.md
skills/crispr_review/: SKILL.md
skills/dask/: SKILL.md
skills/database-lookup/: SKILL.md
skills/datamol/: SKILL.md
skills/deepchem/: SKILL.md
skills/deeptools/: SKILL.md
skills/depmap/: SKILL.md
skills/dhdna-profiler/: SKILL.md
skills/diffdock/: SKILL.md
skills/dnanexus-integration/: SKILL.md
skills/docx/: SKILL.md
skills/esm/: SKILL.md
skills/etetoolkit/: SKILL.md
skills/exa-search/: SKILL.md
skills/exploratory-data-analysis/: SKILL.md
skills/flowio/: SKILL.md
skills/fluidsim/: SKILL.md
skills/generate-image/: SKILL.md
skills/geniml/: SKILL.md
skills/geomaster/: SKILL.md
skills/geopandas/: SKILL.md
skills/get-available-resources/: SKILL.md
skills/gget/: SKILL.md
skills/ginkgo-cloud-lab/: SKILL.md
skills/glycoengineering/: SKILL.md
skills/gtars/: SKILL.md
skills/histolab/: SKILL.md
skills/hugging-science/: SKILL.md
skills/hypogenic/: SKILL.md
skills/hypothesis-generation/: SKILL.md
skills/hypothesis_generator/: SKILL.md
skills/imaging-data-commons/: SKILL.md
skills/infographics/: SKILL.md
skills/iso-13485-certification/: SKILL.md
skills/labarchive-integration/: SKILL.md
skills/lamindb/: SKILL.md
skills/latchbio-integration/: SKILL.md
skills/latex-posters/: SKILL.md
skills/literature-review/: SKILL.md
skills/markdown-mermaid-writing/: SKILL.md
skills/market-research-reports/: SKILL.md
skills/markitdown/: SKILL.md
skills/matchms/: SKILL.md
skills/matlab/: SKILL.md
skills/matplotlib/: SKILL.md
skills/medchem/: SKILL.md
skills/modal/: SKILL.md
skills/molecular-dynamics/: SKILL.md
skills/molfeat/: SKILL.md
skills/networkx/: SKILL.md
skills/neurokit2/: SKILL.md
skills/neuropixels-analysis/: SKILL.md
skills/omero-integration/: SKILL.md
skills/open-notebook/: SKILL.md
skills/opentrons-integration/: SKILL.md
skills/optimize-for-gpu/: SKILL.md
skills/pacsomatic/: SKILL.md
skills/paper-lookup/: SKILL.md
skills/paper_summarizer/: SKILL.md
skills/paperzilla/: SKILL.md
skills/parallel-web/: SKILL.md
skills/pathml/: SKILL.md
skills/pdf/: SKILL.md
skills/peer-review/: SKILL.md
skills/pennylane/: SKILL.md
skills/phylogenetics/: SKILL.md
skills/polars/: SKILL.md
skills/polars-bio/: SKILL.md
skills/pptx/: SKILL.md
skills/pptx-posters/: SKILL.md
skills/primekg/: SKILL.md
skills/protocolsio-integration/: SKILL.md
skills/pufferlib/: SKILL.md
skills/pydeseq2/: SKILL.md
skills/pydicom/: SKILL.md
skills/pyhealth/: SKILL.md
skills/pylabrobot/: SKILL.md
skills/pymatgen/: SKILL.md
skills/pymc/: SKILL.md
skills/pymoo/: SKILL.md
skills/pyopenms/: SKILL.md
skills/pysam/: SKILL.md
skills/pytdc/: SKILL.md
skills/pytorch-lightning/: SKILL.md
skills/qiskit/: SKILL.md
(+50 files in other folders)
