[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/provider",
    "crates/agent",
    "crates/cli",
    "crates/tool",
    "crates/memory",
    "crates/checkpoint",
    "crates/workflow",
    "crates/kg",
    "crates/hypothesis",
    "crates/self-improve",
    "crates/python",
    "crates/sandbox",
    "crates/telemetry",
    "crates/server",
    "crates/skill",
    "crates/planning",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/miniagent"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
dotenvy = "0.15"
rusqlite = { version = "0.34", features = ["bundled"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
