[package]
name = "miniagent-hypothesis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
miniagent-provider = { path = "../provider" }
miniagent-kg = { path = "../kg" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
