[package]
name = "miniagent-kg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
miniagent-provider = { path = "../provider" }
miniagent-memory = { path = "../memory" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
