[package]
name = "miniagent-planning"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
miniagent-provider = { path = "../provider" }
miniagent-agent = { path = "../agent" }
miniagent-tool = { path = "../tool" }
miniagent-skill = { path = "../skill" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
futures-util.workspace = true
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
