[package]
name = "miniagent-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
miniagent-provider = { path = "../provider" }
miniagent-agent = { path = "../agent" }
miniagent-memory = { path = "../memory" }
miniagent-tool = { path = "../tool" }
miniagent-checkpoint = { path = "../checkpoint" }
miniagent-telemetry = { path = "../telemetry" }
miniagent-workflow = { path = "../workflow" }
tokio-util.workspace = true
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
dashmap = "6"
dotenvy.workspace = true
