[package]
name = "miniagent-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
miniagent-tool = { path = "../tool" }
miniagent-self-improve = { path = "../self-improve" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
