[package]
name = "miniagent-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
