[package]
name = "miniagent-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
tracing.workspace = true
futures-util.workspace = true
regex = "1"
urlencoding = "2"
