[package]
name = "miniagent-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniagent-core = { path = "../core" }
miniagent-agent = { path = "../agent" }
miniagent-provider = { path = "../provider" }
miniagent-tool = { path = "../tool" }
miniagent-memory = { path = "../memory" }
miniagent-checkpoint = { path = "../checkpoint" }
miniagent-skill = { path = "../skill" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
regex-lite = "0.1"
